--- a/index.html
+++ b/index.html
@@ -8,6 +8,50 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body style="background-color: #EB7FB9;">
+    <section class="container">
+        <div class="row">
+            <div class="box-1">
+                <div class="col0-1-3"></div>
+            </div>
+            <div class="box-7">
+                 <div class="col0-1-3"></div>
+            </div>
+            <div class="box-8">
+                  <div class="col0-1-3"></div>
+            </div>
+        </div>
+
+    </section>
+    <section class="container">
+        <div class="row-1">
+           
+        </div>
+    </section>
+    <section class="container">
+        <div class="row">
+            <div class="box-2">
+                <div class="col0-1-2"></div>
+            </div>
+            <div class="box-6">
+                 <div class="col0-1-2"></div>
+            </div>
+        </div>
+
+    </section>
+    <section class="container">
+        <div class="row">
+            <div class="box-3">
+                <div class="col0-1-3"></div>
+            </div>
+            <div class="box-4">
+                 <div class="col0-1-3"></div>
+            </div>
+            <div class="box-5">
+                  <div class="col0-1-3"></div>
+            </div>
+        </div>
+
+    </section>
     
 </body>
 </html>
